# glowing-train

./: .gitignore  cabal.project  hasktorch-skeleton.cabal  shell.nix
exe/: Main.hs
nix/: sources.json
nix/overlays/: libtorch.nix
src/: HasktorchSkeleton.hs  MnistMlp.hs  StaticMnistCnn.hs
src/Goal/Core/Vector/: Generic.hs  Storable.hs
src/Goal/Geometry/: Manifold.hs
