cabal-version:       2.2
name:                hasktorch-skeleton
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends:
      base >= 4.12 && < 5
    , hasktorch >= 0.2 && < 0.3
    , mtl
    , libtorch-ffi
    , vector
    , pipes
    , pipes-safe
    , pipes-concurrency
    , safe-exceptions,
        directory,
        containers,
        vector,
        math-functions,
        hmatrix,
        vector-sized,
        finite-typelits,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        deepseq,
        process,
        hmatrix-gsl,
        primitive,
        bytestring,
        cassava,
        async,
        criterion,
        optparse-applicative

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hasktorch-skeleton

library
  import: base
  exposed-modules:
    HasktorchSkeleton
    MnistMlp
    StaticMnistCnn
    Common
    Goal.Core
    Goal.Core.Util
    Goal.Core.Project
    Goal.Core.Circuit
    Goal.Core.Vector.Storable
    Goal.Core.Vector.Generic
    Goal.Core.Vector.Generic.Internal
    Goal.Core.Vector.Generic.Mutable
    Goal.Core.Vector.Boxed
  hs-source-dirs: src
  default-extensions:
      ScopedTypeVariables,
      ExplicitNamespaces,
      TypeOperators,
      KindSignatures,
      DataKinds,
      RankNTypes,
      TypeFamilies,
      FlexibleContexts,
      MultiParamTypeClasses,
      ConstraintKinds,
      NoStarIsType,
      FlexibleInstances

executable example
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
